--- a/index.css
+++ b/index.css
@@ -45,3 +45,10 @@ h2
 body {
     background-color: #fdecf9;
 }
+
+intr 
+{
+color:powderblue;
+font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+font-size: 25px;
+}
