--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ p
     height: auto;
     border: 2px solid pink;
     border-radius: 5px;
-    background:  linear-gradient(to right, #ff97d0d0, #ffdcb4, #ffcaccf2);;
+    background-color:  #ffd6b4e6;
     font-size: 15px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
