--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ p
 
 img {
     width: 300px; /* Set the width to 300 pixels */
-    height: auto; /* Maintain the aspect ratio */
+    height: 400px; 
     border: 3px solid plum;
     border-radius: 6px;
     display: block; /* Make the image a block-level element */
