--- a/index.css
+++ b/index.css
@@ -17,10 +17,12 @@ p
     font-size: 50px;
 }
 
-.red{
+.food{
     color: #cd626c;
     margin-left: 20px;
+    margin-top: 150px;
     font-size: 30px;
+    text-align: center;
     
 }
 
@@ -53,11 +55,14 @@ img {
 
 
 
-.purple
+.destination
 {
     color:darkmagenta;
     margin-left: 20px;
+    margin-top: 100px;
+    margin-bottom: 20px;
     font-size: 30px;
+    text-align: center;
 }
 
 .foodcaption{
